<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activities.ContactUsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/m_semibold"
            android:text="@string/contact_us"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="contact.json"
        app:lottie_loop="true" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/m_semibold"
            android:text="@string/customer_support"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/m_regular"
            android:text="@string/if_you_have_a_query_you_can_reach_out_to_us_through_one_of_the_following_method"
            android:textColor="#757575"
            android:textSize="12sp" />


        <RelativeLayout
            android:id="@+id/rel_call"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/call"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:src="@drawable/telephone"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/call"
                android:fontFamily="@font/m_semibold"
                android:text="@string/talk_to_us"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/contactNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/call"
                android:fontFamily="@font/m_light"
                android:textColor="@color/black"
                android:layout_below="@id/txt1"
                android:textSize="12sp" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relWirteUs"
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <ImageView
                android:id="@+id/msg"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:src="@drawable/mail"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/msg"
                android:fontFamily="@font/m_semibold"
                android:text="@string/write_to_us"
                android:textColor="@color/black"
                android:textSize="16sp" />



            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/msg"
                android:fontFamily="@font/m_light"

                android:textColor="@color/black"
                android:layout_below="@id/txt2"
                android:textSize="12sp" />


        </RelativeLayout>

    </LinearLayout>


</LinearLayout>