<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/note_you_must_verify_your_profile_before_you_can_post_or_rent_an_item"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/m_semibold" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/you_can_verify_your_profile_by_going_to_the_settings_section_under_the_profile_tab_and_upload_the_required_documents"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:fontFamily="@font/m_regular" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/click_ok_to_go_to_document_upload_section"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:fontFamily="@font/m_bold" />




            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOk"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="OK"
                android:fontFamily="@font/m_semibold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                app:cornerRadius="30dp"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>